--- a/capstone/src/Styles/IngredientList.css
+++ b/capstone/src/Styles/IngredientList.css
@@ -43,5 +43,7 @@
     align-items: flex-end; 
     height: 80px; 
     padding: 10px;
+    /* margin adjustment to fix navbar overlap issue */
+    margin-top: 20px;
     }
 }
