--- a/capstone/src/Styles/Recipe.css
+++ b/capstone/src/Styles/Recipe.css
@@ -1,7 +1,7 @@
 #basic_recipe_info{
     margin-left: 1em;
     margin-right: 1em;
-    margin-bottom: 3em; /* this is a quick fix for the navbar overlapping issue that I will likey have to come back to later -J */
+    margin-bottom: 1em;
 }
 #allergic_alert{
     margin: 1em;
@@ -16,10 +16,17 @@
     align-items: flex-end; 
     height: 80px; 
     padding: 10px;
+    /* margin adjustment to fix navbar overlap issue */
+    margin-top: 20px;
     }
 }
 /* Mobile Page Styles */
-@media (max-width: 768px) {}
+@media (max-width: 768px) {
+    #last-recipe {
+        /* margin adjustment to fix navbar overlap issue */
+        margin-bottom: 70px;
+    }
+}
 
 /* Allows us to customize the size of buttons for the recipes.
    The standard options looked silly
